add llm memory and semantic cache